assets/sass/fractal6.scss
/* ... */
.commentInput {
    .message-header {
        border: 0 !important;
        padding: 0 0.75rem !important;
    }
    .message-body {
        padding: 0.75rem 0.75rem !important;
    }
    .textarea {
        resize: both;
    }
}

.commentHeader {
    width: 100%;
    .level-right {
        font-size: 15px;
        font-family: "Times New Roman", Times, serif !important;
        *:not(:last-child) {
            padding-left: 0.6rem;
            padding-right: 0.6rem;
            font-weight: 600;
            color: var(--is-discrete);
            &:hover {
                background: var(--background-evidence);
                color: var(--is-highlight);
            }
        }
        //div:last-child {
        //    margin-left: 0.5rem;
        //    padding-left: 0.75rem;
        //    display: flex;
        //    align-items: center;
        //}
    }
}

#cardPanel {
    border-left: 1px solid var(--hbc);
    .comments, .main-block, .header-block {
        background: var(--bbc);
    }

    .media {
        padding: 0 0rem !important;
    }

    .message-header {
        padding-top: 0.3rem;
        padding-bottom: 0.3rem;
        .dropdown-trigger {
            padding-top: 8px;
        }
    }

    .message-body {
    }

    // Ignore has-arrow-left
    .has-arrow-left:after, .has-arrow-left:before {
        display: none;
    }

}

.panel-background {
    opacity: 0.75;
}

.actionComment {
    margin-left: 1rem !important;
    @include tablet {
        margin-left: 5rem !important;
    }
    font-size: 14px !important;
}
#cardPanel {
    .actionComment {
        margin-left: 1rem !important;
    }
}

.tensionSidePane {
    //margin-top: 2.25rem !important;

    .media:first-child {
        border-top: 1px solid var(--border-color-light) !important;
        padding-top: 1rem !important;
    }

    .media {
        border-top: 1px solid var(--border-color-light) !important;
        margin: 0;
        padding-bottom: 2rem;
    }

    .media-content {
        font-size: 14px !important;
        .subtitle {
            font-size: 13px !important;
            font-weight: 600 !important;
            color: var(--is-discrete);
            margin-bottom: 1rem !important;
        }
    }

    .level {
        justify-content: start;
    }
    .level-left {
        font-size: 0.75rem;
        font-weight: bold;
        color: var(--is-hint);
        flex-basis: 33%;
        padding-right: var(--size-small);
    }
    .level-item {
        flex-grow: 0 !important;
        justify-content: left;
    }

    .level .help {
        margin-top: 0;
    }
}

.dropList {
    position: absolute;
    background: var(--background-evidence);
    border: 1px solid var(--grey-light);
    max-width: 450px;
    z-index: 25;
    @include tablet {
        min-width: 300px;
    }
    @include touch {
        min-width: 200px;
    }

    .control {
        .icon { color: var(--grey) !important; }
    }

    &.is-right {
        left: auto;
        right: 0;
    }
}

.is-reversed > .dropList {
    bottom: 2rem;
}

.panel {
    .panel-heading {
        background-color: inherit;
        font-weight: 500;
    }

    .panel-block.is-top {
        border-bottom: 2px solid var(--border-color);
    }
    .panel-block.no-border {
        border-bottom: none;
    }
}

.selectors {
    max-height: 250px;
    overflow-y: auto;

    .panel-block, .panel-icon {
        &:hover:not(.is-static) {
            cursor: pointer !important;
            background: var(--hbc) !important;
        }
    }
    .panel-block {
        border-bottom-color: var(--border-color);
        &.is-active .panel-icon, &:hover .panel-icon {
            color: var(--link-active) !important;
        }
    }
    .panel-icon {
        font-size: 1.5rem;
    }
}

.searchInput {
    position: absolute;
    top: 0;
    left: 0;
}
.searchInput::after {
    content: " ";
    position: absolute;
    top: 100%;
    left: 50%;
}

#colorPicker {
    position: absolute;
    z-index: 25;
    background-color: var(--white-light);
    color: black;
    border-radius: 5px !important;
    border: 1px solid var(--grey-light);
    padding: 10px;

    .colorBoxes {
        width: 256px;
    }

    @include mobile { // is-right
        left: auto;
        right: 0;
    }

}
.buttonColor {
    width: 28px !important;
    height: 28px !important;
    border-radius: 6px !important;
    border-width: 0 !important;
    margin: 0px 8px 5px 0px;
    &:hover {cursor: pointer; }
}

.actionPanelStyle {
    .dropdown-content {
        position: absolute;
        z-index: 25;
        overflow: unset;
        min-width: 12rem;
        max-height: none;
        width: auto;
        height: auto;
        &.is-right {
            left: auto;
            right: 0;
        }
    }

    .dropdown-item {
        //font-size: 12px;
        padding-top: 5px;
        padding-bottom: 5px;
    }
}

.tagsinput {
    display: inline-flex;

    .box {
        border: none !important;
    }

    .tag {
        height: 2.2em;
        font-size: 0.9rem;
        color: var(--grey-darker);
        background-color: var(--white-ter);
        &.is-delete {
            &:hover {
                cursor: pointer;
                color: var(--red);
                background-color: var(--white-ter);
            }
        }
    }

    &.singleSelection {
        position: absolute;
        top: 4px;
        left: 11px;
        z-index: 80;
    }
}

//
// Tensions
//

#tensionsTab  {
    .tooltip {
        &::before,
        &::after {
            font-size: $size-7 !important;
        }
    }

    .t-o{
        font-size: 1rem !important;
    }
}

#journalTab {
   .content {
       padding: 10px;
       margin-bottom: 10px;
   }

    .content + .content {
        border-top: 1px var(--border-color-light) solid;
    }
}
/* ... */

